# compareAI

./: readme.md
doc/: 训练框架和推理框架对比.docx
get_pretrainedModels/paddel_demo/: download_pretrainedModels.py  save_res50_module.py  testdemo.py  vgg16_demo.py
get_pretrainedModels/paddel_demo/vgg16_imagenet/: label_file.txt
get_pretrainedModels/torch_demo/: demo.py
get_pretrainedModels/torch_demo/mnn_model_fp32/: mnn_node.txt
src/mnn_demo/: CMakeLists.txt  config.json  main.cpp  mnnCompareAI.cpp  mnnCompareAI.hpp
src/paddle_demo/: CMakeLists.txt  config.json  liteCompareAI.cpp  liteCompareAI.h  paddle_demo.cpp
